--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
     <meta name="description" content="{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}">
     <meta name="author" content="ProjectLiberty2029 is founded by Vector Hasting">
     <!-- <link rel="stylesheet" href="/css/foundation_PL2029.css">      -->
-    <!-- <link rel="stylesheet" href="/css/font-awesome.css">           -->
+    <link rel="stylesheet" href="/css/font-awesome.css">
     <!-- <link rel="stylesheet" href="/css/coderay.css">                -->
     <!-- <style>pre > code { border: 0 }</style>                        --> 
     <link rel="stylesheet" href="/css/coderay_PL2029.css">
